--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/idt/a406cb4a-3923-4930-ad0e-d6c805adb64b'>IDT - Director of Development Operations - DevOps</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -149,7 +153,7 @@ leading?...</p>
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/stacksports/jobs/1787995'>Job Application for DevOps Engineer at Stack Sports  </a></h5> 
+<h5><a href='https://boards.greenhouse.io/stacksports/jobs/1787995'>Job Application for DevOps Engineer at Stack Sports  </a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -266,7 +270,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364107002'>Job Application for SRE / DevOps - Joinville/SC at Resultados Digitais</a></h5> 
+<h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364107002'>Job Application for SRE / DevOps - Joinville/SC at Resultados Digitais</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -352,7 +356,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of Senior DevOps Engineer at Azimo.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://redshelf.applytojob.com/apply/msFkIQAoYc/DevOps-Engineer'>DevOps Engineer - RedShelf - Career Page</a></h5> 
+<h5><a href='http://redshelf.applytojob.com/apply/msFkIQAoYc/DevOps-Engineer'>DevOps Engineer - RedShelf - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -392,7 +396,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://chilipublish.recruitee.com/o/qa-engineer-devops-specialist'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chilipublish.recruitee.com/o/qa-engineer-devops-specialist'>
       QA Engineer / DevOps Specialist - CHILI publish
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -440,7 +444,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://edc.referrals.selectminds.com/jobs/sr-devops-engineer-2235'>Sr DevOps Engineer - Entrust Datacard Careers</a></h5> 
+<h5><a href='https://edc.referrals.selectminds.com/jobs/sr-devops-engineer-2235'>Sr DevOps Engineer - Entrust Datacard Careers</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -458,10 +462,6 @@ relationships through actionable data, advanced analytics and machine learning.<
 <hr/>
 <h5><a href='https://codete.workable.com/j/66772B90A6'>Codete - Jobs: Senior DevOps Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Lesser Poland Voivodeship, Poland</span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/devopsdna/job/1417wm6tkspucgb5y1ifbeesbc'>Front-End Engineer (Contract)  | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
-<p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
 
